src/public/training/kubernetes-training/manifests/2-AppDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-rest-api
spec:
  selector:
    matchLabels:
      app: python-rest-api
  template:
    metadata:
      labels:
        app: python-rest-api
    spec:
      containers:
        - name: python-rest-api
          # Specify the docker image we want
          image: at-docker.eng.at.caliangroup.com/training/python-training-container:quinnbast

          # Allows setting CLI flags!
          command: [ "python3", "main.py", "--experimental" ]

          # Set env variables for the docker image:
          ports:
            - containerPort: 8080
