src/public/training/kubernetes-training/manifests/5-TalkToRedis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-rest-api
spec:
  selector:
    matchLabels:
      app: python-rest-api
  template:
    metadata:
      labels:
        app: python-rest-api
    spec:
      containers:
        - name: python-rest-api
          # Specify the docker image we want
          image: at-docker.eng.at.caliangroup.com/training/python-training-container:quinnbast

          # Allows setting CLI flags!
          command: [ "python3", "main.py", "--experimental", "--file", "/app/config/config.yaml" ]

          # Set env variables for the docker image:
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: python-config
              mountPath: "/app/config"
              readOnly: true
      volumes:
      - name: python-config
        configMap:
          name: python-app-config
---
apiVersion: v1
kind: Service
metadata:
  name: python-rest-service
spec:
  type: NodePort
  selector:
    app: python-rest-api
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
