src/public/training/kubernetes-training/manifests/6-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /rest
            pathType: Prefix
            backend:
              service:
                name: python-rest-service
                port:
                  number: 8080
